# git-sdk-64

./: .gitignore  README.md  msys2_shell.cmd  setup-git-sdk.bat  ssl  update-via-pacman.bat  update-via-pacman.ps1
.github/: commit-sdk.sh
etc/: gdbinit  (+16 more)
mingw32/share/doc/gettext/examples/hello-c++-gnome3/: autoclean.sh  configure.ac
mingw32/share/doc/gettext/examples/hello-c++-gnome3/po/: af.po  bg.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  hr.po  hu.po  id.po  ja.po  ka.po  ky.po  lv.po  ms.po  mt.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  ta.po  tr.po  uk.po  vi.po  zh_CN.po  zh_HK.po  zh_TW.po
mingw32/share/doc/gettext/examples/hello-c-gnome3/: Makefile.am  README  autoclean.sh  configure.ac  hello2.gschema.xml
mingw32/share/doc/gettext/examples/hello-c-gnome3/po/: Makevars  af.po  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  ga.po  gl.po  hr.po  id.po  it.po  ja.po  ka.po  ky.po  ms.po  mt.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  ta.po  tr.po  uk.po  vi.po  zh_CN.po  (+2 more)
mingw32/share/doc/gettext/examples/hello-go-http/example1/: Makefile.am
mingw32/share/doc/gettext/examples/hello-go/example1/: Makefile.am  hello1ml.go.in  hello1sl.go.in
mingw32/share/doc/gettext/examples/hello-java-swing/po/: Makefile.am  bg.po  cs.po  de.po  el.po  eo.po  es.po  fi.po  ga.po  hr.po  hu.po  it.po  ja.po  ky.po  lv.po  ms.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  ta.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
mingw32/share/doc/gettext/examples/hello-modula2/: Makefile.am  autoclean.sh  autogen.sh  configure.ac  hello.mod.in
mingw32/share/doc/gettext/examples/hello-modula2/m4/: Makefile.am
mingw32/share/doc/gettext/examples/hello-modula2/po/: Makefile.am  ast.po  bg.po  ca.po  cs.po  de.po  es.po  fr.po  hr.po  id.po  it.po  ja.po  ka.po  lv.po  ms.po  mt.po  nb.po  nn.po  pl.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sr.po  sv.po  ta.po  tr.po  uk.po  vi.po  zh_CN.po  zh_HK.po  zh_TW.po
mingw32/share/doc/gettext/examples/hello-objc/: autogen.sh  configure.ac
mingw32/share/doc/gettext/examples/hello-objc/po/: af.po  bg.po  ca.po  cs.po  da.po  de.po  es.po  gl.po  hr.po  hu.po  it.po  ja.po  ms.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  ta.po  tr.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
mingw32/share/doc/gettext/examples/hello-ocaml/: Makefile.am  autoclean.sh  configure.ac
mingw32/share/doc/gettext/examples/hello-ocaml/po/: af.po  bg.po  cs.po  da.po  de.po  el.po  fi.po  fr.po  gl.po  hr.po  hu.po  ka.po  ms.po  nb.po  nl.po  sv.po  ta.po  tr.po  vi.po  zh_CN.po  zh_TW.po
mingw32/share/doc/gettext/examples/hello-rust/: Makefile.am  autoclean.sh  autogen.sh  configure.ac
mingw32/share/doc/gettext/examples/hello-rust/po/: Makefile.am  af.po  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fr.po  ga.po  gl.po  hr.po  hu.po  it.po  ja.po  ka.po  ky.po  lv.po  mt.po  nb.po  nl.po  nn.po  pl.po  pt.po  ro.po  sk.po  sl.po  sr.po  sv.po  ta.po  tr.po  uk.po  vi.po  zh_CN.po  zh_HK.po  zh_TW.po
mingw32/share/doc/gettext/examples/hello-rust/src/: main.rs.in
mingw64/share/doc/gettext/examples/hello-c++-gnome3/: INSTALL  Makefile.am  README  autoclean.sh  configure.ac  hello.cc  hello.ui
mingw64/share/doc/gettext/examples/hello-c++-gnome3/po/: POTFILES.in  af.po  ast.po  bg.po  ca.po  cs.po  de.po  el.po  es.po  fr.po  ga.po  gl.po  hr.po  it.po  ja.po  ky.po  ms.po  nb.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  ta.po  tr.po  uk.po  vi.po  zh_CN.po  zh_HK.po  zh_TW.po
mingw64/share/doc/gettext/examples/hello-c-gnome3/: Makefile.am  autoclean.sh  configure.ac  hello.c  hello2.c  hello2.desktop.in.in  hello2.gresource.xml
mingw64/share/doc/gettext/examples/hello-c-gnome3/po/: POTFILES.in  af.po  ast.po  bg.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  fr.po  ga.po  hr.po  hu.po  id.po  it.po  ja.po  ka.po  ky.po  lv.po  ms.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  ta.po  tr.po  uk.po  vi.po  zh_CN.po  (+2 more)
mingw64/share/doc/gettext/examples/hello-csharp-forms/po/: Makefile.am  af.po  ast.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  eo.po  es.po  fi.po  ga.po  hr.po  hu.po  it.po  ja.po  ms.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.po
mingw64/share/doc/gettext/examples/hello-d/: Makefile.am  autoclean.sh  autogen.sh  configure.ac
mingw64/share/doc/gettext/examples/hello-d/po/: Makefile.am  af.po  ast.po  bg.po  da.po  es.po  fr.po  ga.po  hr.po  it.po  nb.po  nl.po  pl.po  pt.po  pt_BR.po  sk.po  sq.po  sv.po  uk.po  zh_CN.po  zh_TW.po
mingw64/share/doc/gettext/examples/hello-go/: INSTALL  Makefile.am  autoclean.sh  autogen.sh  configure.ac
mingw64/share/doc/gettext/examples/hello-go-http/: Makefile.am  autoclean.sh  configure.ac
mingw64/share/doc/gettext/examples/hello-go-http/example1/: hello1ml.go.in
mingw64/share/doc/gettext/examples/hello-go-http/m4/: Makefile.am
mingw64/share/doc/gettext/examples/hello-go-http/po/: Makefile.am  ast.po  bg.po  ca.po  cs.po  de.po  eo.po  es.po  ga.po  hr.po  hu.po  lv.po  nb.po  nl.po  nn.po  pt.po  pt_BR.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  ta.po  tr.po  vi.po  zh_HK.po
mingw64/share/doc/gettext/examples/hello-go/example1/: go.mod.in
mingw64/share/doc/gettext/examples/hello-go/example2/: Makefile.am
mingw64/share/doc/gettext/examples/hello-go/example3/: Makefile.am
mingw64/share/doc/gettext/examples/hello-go/po/: Makefile.am  ast.po  bg.po  ca.po  cs.po  da.po  de.po  fi.po  fr.po  hu.po  id.po  it.po  ja.po  ka.po  ms.po  nb.po  pt.po  pt_BR.po  ro.po  ru.po  sr.po  sv.po  uk.po  zh_CN.po
mingw64/share/doc/gettext/examples/hello-modula2/: INSTALL  autoclean.sh  configure.ac
mingw64/share/doc/gettext/examples/hello-sh/: configure.ac  hello-1.sh  hello-3.sh
(+60518 files in other folders)
