# Example for use of GNU gettext.
# This file is in the public domain.
#
# Makefile configuration - processed by automake.

# General automake options.
AUTOMAKE_OPTIONS = foreign
ACLOCAL_AMFLAGS = -I m4

# The list of subdirectories containing Makefiles.
SUBDIRS = example1 example2 example3 m4 po

DISTCLEANFILES = gocomp.sh

# Additional files to be distributed.
EXTRA_DIST = autogen.sh autoclean.sh
